   // src/proto/book.proto
   syntax = "proto3";

   package book;

   message GetBookRequest {
     string id = 1;
   }

   message Book {
     string id = 1;
     string name = 2;
     bool isAvailable = 3;
   }

   service BookService {
     rpc getBook(GetBookRequest) returns (Book) {}
   }